--- a/Notebooks/Combining Data.ipynb
+++ b/Notebooks/Combining Data.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +46,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +221,7 @@
        "4          7.6  167303.0     4.5      190.222222  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
        "[474 rows x 11 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +514,7 @@
        "      <th>Year</th>\n",
        "      <th>Director</th>\n",
        "      <th>Gross_Income</th>\n",
-       "      <th>Movie Genre</th>\n",
+       "      <th>Movie_Genre</th>\n",
        "      <th>Movie Runtime</th>\n",
        "      <th>IMDb Rating</th>\n",
        "      <th>Votes</th>\n",
@@ -521,23 +523,286 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Steve McQueen</td>\n",
+       "      <td>56.67</td>\n",
+       "      <td>['Biography', ' Drama', ' History']</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>620265.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>183.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>127 Hours</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Danny Boyle</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>['Biography', ' Drama']</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>340612.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2001: A Space Odyssey</td>\n",
+       "      <td>G</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>Stanley Kubrick</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>['Adventure', ' Sci-Fi']</td>\n",
+       "      <td>149</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>583273.0</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>442.380952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>21 Grams</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Alejandro G. Iñárritu</td>\n",
+       "      <td>16.29</td>\n",
+       "      <td>['Crime', ' Drama', ' Thriller']</td>\n",
+       "      <td>124</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>220500.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>-18.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>25th Hour</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Spike Lee</td>\n",
+       "      <td>13.06</td>\n",
+       "      <td>['Drama']</td>\n",
+       "      <td>135</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>167303.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>190.222222</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Title, Movie Rating, Year, Director, Gross_Income, Movie Genre, Movie Runtime, IMDb Rating, Votes, Budget, Profit_percent]\n",
-       "Index: []"
+       "                   Title Movie Rating  Year               Director  \\\n",
+       "0       12 Years a Slave            R  2013          Steve McQueen   \n",
+       "1              127 Hours            R  2010            Danny Boyle   \n",
+       "2  2001: A Space Odyssey            G  1968        Stanley Kubrick   \n",
+       "3               21 Grams            R  2003  Alejandro G. Iñárritu   \n",
+       "4              25th Hour            R  2002              Spike Lee   \n",
+       "\n",
+       "   Gross_Income                          Movie_Genre  Movie Runtime  \\\n",
+       "0         56.67  ['Biography', ' Drama', ' History']            134   \n",
+       "1         18.34              ['Biography', ' Drama']             94   \n",
+       "2         56.95             ['Adventure', ' Sci-Fi']            149   \n",
+       "3         16.29     ['Crime', ' Drama', ' Thriller']            124   \n",
+       "4         13.06                            ['Drama']            135   \n",
+       "\n",
+       "   IMDb Rating     Votes  Budget  Profit_percent  \n",
+       "0          8.1  620265.0    20.0      183.350000  \n",
+       "1          7.6  340612.0    18.0        1.888889  \n",
+       "2          8.3  583273.0    10.5      442.380952  \n",
+       "3          7.7  220500.0    20.0      -18.550000  \n",
+       "4          7.6  167303.0     4.5      190.222222  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fulldf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Amarnath\\Anaconda3\\envs\\learn-env\\lib\\site-packages\\ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Movie Rating</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Gross_Income</th>\n",
+       "      <th>Movie_Genre</th>\n",
+       "      <th>Movie Runtime</th>\n",
+       "      <th>IMDb Rating</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Budget</th>\n",
+       "      <th>Profit_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Steve McQueen</td>\n",
+       "      <td>56.67</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>620265.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>183.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Steve McQueen</td>\n",
+       "      <td>56.67</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>620265.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>183.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Steve McQueen</td>\n",
+       "      <td>56.67</td>\n",
+       "      <td>History</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>620265.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>183.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>127 Hours</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Danny Boyle</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>340612.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>127 Hours</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Danny Boyle</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>340612.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.888889</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Title Movie Rating  Year       Director  Gross_Income  \\\n",
+       "0  12 Years a Slave            R  2013  Steve McQueen         56.67   \n",
+       "1  12 Years a Slave            R  2013  Steve McQueen         56.67   \n",
+       "2  12 Years a Slave            R  2013  Steve McQueen         56.67   \n",
+       "3         127 Hours            R  2010    Danny Boyle         18.34   \n",
+       "4         127 Hours            R  2010    Danny Boyle         18.34   \n",
+       "\n",
+       "  Movie_Genre  Movie Runtime  IMDb Rating     Votes  Budget  Profit_percent  \n",
+       "0   Biography            134          8.1  620265.0    20.0      183.350000  \n",
+       "1       Drama            134          8.1  620265.0    20.0      183.350000  \n",
+       "2     History            134          8.1  620265.0    20.0      183.350000  \n",
+       "3   Biography             94          7.6  340612.0    18.0        1.888889  \n",
+       "4       Drama             94          7.6  340612.0    18.0        1.888889  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create new test df to goof around\n",
+    "\n",
+    "amartestdf = pd.read_csv(\"fulldf.csv\")\n",
+    "amartestdf.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Converted the information in each Movie_Genre col x row into a list of strings\n",
+    "\n",
+    "for genre_row in range(len(amartestdf['Movie_Genre'])):\n",
+    "    amartestdf['Movie_Genre'][genre_row] = amartestdf['Movie_Genre'][genre_row].strip('[]').replace(\"'\", \"\").replace(\" \",\"\").split(\",\")\n",
+    "# amartestdf.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#https://stackoverflow.com/questions/27263805/pandas-column-of-lists-create-a-row-for-each-list-element\n",
+    "\n",
+    "lst_col = 'Movie_Genre'\n",
+    "\n",
+    "amartestdf2 = pd.DataFrame({\n",
+    "      col:np.repeat(amartestdf[col].values, amartestdf[lst_col].str.len())\n",
+    "      for col in amartestdf.columns.drop(lst_col)}\n",
+    "    ).assign(**{lst_col:np.concatenate(amartestdf[lst_col].values)})[amartestdf.columns]\n",
+    "\n",
+    "amartestdf2.head()\n",
+    "\n"
    ]
   },
   {
