" added more visuals, docstring"

--- a/Notebooks/Web_Scraper.ipynb
+++ b/Notebooks/Web_Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "    df.loc[:,'Votes'] = df['Votes'].str.replace(',','').astype(float)\n",
     "    df.loc[:,'Gross Income']= df['Gross Income']\n",
     "    df.loc[:, 'Title'] = df['Title'].astype(str)\n",
-    "    df.loc[:,'Movie Genre'] = df['Movie Genre'].astype(str)\n",
+    "    df.loc[:,'Movie Genre'] = df['Movie Genre'].astype(str).str.replace(' ',\"\").str.replace(\"'\",\"\").str.strip('[]')\n",
     "    df.loc[:, 'Director'] = df['Director'].astype(str)\n",
     "    df.drop_duplicates()\n",
     "    "
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 756 entries, 0 to 755\n",
+      "Data columns (total 9 columns):\n",
+      "Title            756 non-null object\n",
+      "Movie Rating     756 non-null object\n",
+      "Year             756 non-null int32\n",
+      "Director         756 non-null object\n",
+      "Gross Income     756 non-null object\n",
+      "Movie Genre      756 non-null object\n",
+      "Movie Runtime    756 non-null int32\n",
+      "IMDb Rating      756 non-null float64\n",
+      "Votes            756 non-null float64\n",
+      "dtypes: float64(2), int32(2), object(5)\n",
+      "memory usage: 47.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Setting the information from above to a dataframe to manipulate and visualize\"\"\"\n",
+    "df = pd.DataFrame({'Title': title,'Movie Rating': movie_rating,'Year': year,'Director':directors,\n",
+    "                   'Gross Income': gross,'Movie Genre': movie_genre, 'Movie Runtime': movie_time,\n",
+    "                    'IMDb Rating': star_rating,'Votes': votes})\n",
+    "Clean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -139,10 +173,10 @@
        "      <td>2009</td>\n",
        "      <td>Marc Webb</td>\n",
        "      <td>32.39</td>\n",
-       "      <td>['Comedy', ' Drama', ' Romance']</td>\n",
+       "      <td>Comedy,Drama,Romance</td>\n",
        "      <td>95</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>462111.0</td>\n",
+       "      <td>462151.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -151,10 +185,10 @@
        "      <td>2013</td>\n",
        "      <td>Steve McQueen</td>\n",
        "      <td>56.67</td>\n",
-       "      <td>['Biography', ' Drama', ' History']</td>\n",
+       "      <td>Biography,Drama,History</td>\n",
        "      <td>134</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>620348.0</td>\n",
+       "      <td>620427.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -163,10 +197,10 @@
        "      <td>2010</td>\n",
        "      <td>Danny Boyle</td>\n",
        "      <td>18.34</td>\n",
-       "      <td>['Biography', ' Drama']</td>\n",
+       "      <td>Biography,Drama</td>\n",
        "      <td>94</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>340655.0</td>\n",
+       "      <td>340696.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -175,10 +209,10 @@
        "      <td>2019</td>\n",
        "      <td>Sam Mendes</td>\n",
        "      <td>159.23</td>\n",
-       "      <td>['Drama', ' War']</td>\n",
+       "      <td>Drama,War</td>\n",
        "      <td>119</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>342958.0</td>\n",
+       "      <td>343323.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -187,10 +221,10 @@
        "      <td>1968</td>\n",
        "      <td>Stanley Kubrick</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>['Adventure', ' Sci-Fi']</td>\n",
+       "      <td>Adventure,Sci-Fi</td>\n",
        "      <td>149</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>583340.0</td>\n",
+       "      <td>583421.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -204,31 +238,26 @@
        "3                   1917            R  2019       Sam Mendes       159.23   \n",
        "4  2001: A Space Odyssey            G  1968  Stanley Kubrick        56.95   \n",
        "\n",
-       "                           Movie Genre  Movie Runtime  IMDb Rating     Votes  \n",
-       "0     ['Comedy', ' Drama', ' Romance']             95          7.7  462111.0  \n",
-       "1  ['Biography', ' Drama', ' History']            134          8.1  620348.0  \n",
-       "2              ['Biography', ' Drama']             94          7.6  340655.0  \n",
-       "3                    ['Drama', ' War']            119          8.3  342958.0  \n",
-       "4             ['Adventure', ' Sci-Fi']            149          8.3  583340.0  "
+       "               Movie Genre  Movie Runtime  IMDb Rating     Votes  \n",
+       "0     Comedy,Drama,Romance             95          7.7  462151.0  \n",
+       "1  Biography,Drama,History            134          8.1  620427.0  \n",
+       "2          Biography,Drama             94          7.6  340696.0  \n",
+       "3                Drama,War            119          8.3  343323.0  \n",
+       "4         Adventure,Sci-Fi            149          8.3  583421.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"Setting the information from above to a dataframe to manipulate and visualize\"\"\"\n",
-    "df = pd.DataFrame({'Title': title,'Movie Rating': movie_rating,'Year': year,'Director':directors,\n",
-    "                   'Gross Income': gross,'Movie Genre': movie_genre, 'Movie Runtime': movie_time,\n",
-    "                    'IMDb Rating': star_rating,'Votes': votes})\n",
-    "Clean()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -280,10 +309,10 @@
        "      <td>2009</td>\n",
        "      <td>Marc Webb</td>\n",
        "      <td>32.39</td>\n",
-       "      <td>['Comedy', ' Drama', ' Romance']</td>\n",
+       "      <td>Comedy,Drama,Romance</td>\n",
        "      <td>95</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>462111.0</td>\n",
+       "      <td>462151.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>12 Years a Slave</td>\n",
@@ -291,10 +320,10 @@
        "      <td>2013</td>\n",
        "      <td>Steve McQueen</td>\n",
        "      <td>56.67</td>\n",
-       "      <td>['Biography', ' Drama', ' History']</td>\n",
+       "      <td>Biography,Drama,History</td>\n",
        "      <td>134</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>620348.0</td>\n",
+       "      <td>620427.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>127 Hours</td>\n",
@@ -302,10 +331,10 @@
        "      <td>2010</td>\n",
        "      <td>Danny Boyle</td>\n",
        "      <td>18.34</td>\n",
-       "      <td>['Biography', ' Drama']</td>\n",
+       "      <td>Biography,Drama</td>\n",
        "      <td>94</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>340655.0</td>\n",
+       "      <td>340696.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1917</td>\n",
@@ -313,10 +342,10 @@
        "      <td>2019</td>\n",
        "      <td>Sam Mendes</td>\n",
        "      <td>159.23</td>\n",
-       "      <td>['Drama', ' War']</td>\n",
+       "      <td>Drama,War</td>\n",
        "      <td>119</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>342958.0</td>\n",
+       "      <td>343323.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2001: A Space Odyssey</td>\n",
@@ -324,10 +353,10 @@
        "      <td>1968</td>\n",
        "      <td>Stanley Kubrick</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>['Adventure', ' Sci-Fi']</td>\n",
+       "      <td>Adventure,Sci-Fi</td>\n",
        "      <td>149</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>583340.0</td>\n",
+       "      <td>583421.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -346,10 +375,10 @@
        "      <td>2018</td>\n",
        "      <td>Pawel Pawlikowski</td>\n",
        "      <td>4.57</td>\n",
-       "      <td>['Drama', ' History', ' Music']</td>\n",
+       "      <td>Drama,History,Music</td>\n",
        "      <td>89</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>44956.0</td>\n",
+       "      <td>44974.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zodiac</td>\n",
@@ -357,10 +386,10 @@
        "      <td>2007</td>\n",
        "      <td>David Fincher</td>\n",
        "      <td>33.08</td>\n",
-       "      <td>['Crime', ' Drama', ' Mystery']</td>\n",
+       "      <td>Crime,Drama,Mystery</td>\n",
        "      <td>157</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>438036.0</td>\n",
+       "      <td>438162.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zombieland</td>\n",
@@ -368,10 +397,10 @@
        "      <td>2009</td>\n",
        "      <td>Ruben Fleischer</td>\n",
        "      <td>75.59</td>\n",
-       "      <td>['Adventure', ' Comedy', ' Fantasy']</td>\n",
+       "      <td>Adventure,Comedy,Fantasy</td>\n",
        "      <td>88</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>507818.0</td>\n",
+       "      <td>507882.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zootopia</td>\n",
@@ -379,10 +408,10 @@
        "      <td>2016</td>\n",
        "      <td>Byron Howard</td>\n",
        "      <td>341.27</td>\n",
-       "      <td>['Animation', ' Adventure', ' Comedy']</td>\n",
+       "      <td>Animation,Adventure,Comedy</td>\n",
        "      <td>108</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>417743.0</td>\n",
+       "      <td>417797.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Black Book</td>\n",
@@ -390,10 +419,10 @@
        "      <td>2006</td>\n",
        "      <td>Paul Verhoeven</td>\n",
        "      <td>4.40</td>\n",
-       "      <td>['Drama', ' Thriller', ' War']</td>\n",
+       "      <td>Drama,Thriller,War</td>\n",
        "      <td>145</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>71240.0</td>\n",
+       "      <td>71248.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -415,38 +444,38 @@
        "Zootopia                        PG  2016       Byron Howard       341.27   \n",
        "Black Book                       R  2006     Paul Verhoeven         4.40   \n",
        "\n",
-       "                                                  Movie Genre  Movie Runtime  \\\n",
-       "Title                                                                          \n",
-       "500 Days of Summer           ['Comedy', ' Drama', ' Romance']             95   \n",
-       "12 Years a Slave          ['Biography', ' Drama', ' History']            134   \n",
-       "127 Hours                             ['Biography', ' Drama']             94   \n",
-       "1917                                        ['Drama', ' War']            119   \n",
-       "2001: A Space Odyssey                ['Adventure', ' Sci-Fi']            149   \n",
-       "...                                                       ...            ...   \n",
-       "Cold War                      ['Drama', ' History', ' Music']             89   \n",
-       "Zodiac                        ['Crime', ' Drama', ' Mystery']            157   \n",
-       "Zombieland               ['Adventure', ' Comedy', ' Fantasy']             88   \n",
-       "Zootopia               ['Animation', ' Adventure', ' Comedy']            108   \n",
-       "Black Book                     ['Drama', ' Thriller', ' War']            145   \n",
+       "                                      Movie Genre  Movie Runtime  IMDb Rating  \\\n",
+       "Title                                                                           \n",
+       "500 Days of Summer           Comedy,Drama,Romance             95          7.7   \n",
+       "12 Years a Slave          Biography,Drama,History            134          8.1   \n",
+       "127 Hours                         Biography,Drama             94          7.6   \n",
+       "1917                                    Drama,War            119          8.3   \n",
+       "2001: A Space Odyssey            Adventure,Sci-Fi            149          8.3   \n",
+       "...                                           ...            ...          ...   \n",
+       "Cold War                      Drama,History,Music             89          7.6   \n",
+       "Zodiac                        Crime,Drama,Mystery            157          7.7   \n",
+       "Zombieland               Adventure,Comedy,Fantasy             88          7.6   \n",
+       "Zootopia               Animation,Adventure,Comedy            108          8.0   \n",
+       "Black Book                     Drama,Thriller,War            145          7.7   \n",
        "\n",
-       "                       IMDb Rating     Votes  \n",
-       "Title                                         \n",
-       "500 Days of Summer             7.7  462111.0  \n",
-       "12 Years a Slave               8.1  620348.0  \n",
-       "127 Hours                      7.6  340655.0  \n",
-       "1917                           8.3  342958.0  \n",
-       "2001: A Space Odyssey          8.3  583340.0  \n",
-       "...                            ...       ...  \n",
-       "Cold War                       7.6   44956.0  \n",
-       "Zodiac                         7.7  438036.0  \n",
-       "Zombieland                     7.6  507818.0  \n",
-       "Zootopia                       8.0  417743.0  \n",
-       "Black Book                     7.7   71240.0  \n",
+       "                          Votes  \n",
+       "Title                            \n",
+       "500 Days of Summer     462151.0  \n",
+       "12 Years a Slave       620427.0  \n",
+       "127 Hours              340696.0  \n",
+       "1917                   343323.0  \n",
+       "2001: A Space Odyssey  583421.0  \n",
+       "...                         ...  \n",
+       "Cold War                44974.0  \n",
+       "Zodiac                 438162.0  \n",
+       "Zombieland             507882.0  \n",
+       "Zootopia               417797.0  \n",
+       "Black Book              71248.0  \n",
        "\n",
        "[756 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
