--- a/Notebooks/Combining Data.ipynb
+++ b/Notebooks/Combining Data.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Getting all relevent imports into the file\"\"\"\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +46,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,36 +57,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Merge the df with budget info with the web scraped dataframe\"\"\"\n",
     "fulldf = pd.merge(df_scraped,df_budget['production_budget'],on ='Title') # add the budget column and release date to df_scraped\n",
-    "   \n",
     "fulldf.rename(columns = {'production_budget':'Budget in millions (USD)', 'Gross Income' : 'Gross Income in millions (USD)'}, inplace = True) # rename production budget to Budget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Add Profit percent column\"\"\"\n",
     "fulldf['Profit percent'] = ((fulldf['Gross Income in millions (USD)'] - fulldf['Budget in millions (USD)'] )/fulldf['Budget in millions (USD)'])*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Save file to csv\"\"\"\n",
     "fulldf.to_csv(\"fulldf.csv\",index=False) # save this df as an excel file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +133,7 @@
        "      <td>2013</td>\n",
        "      <td>Steve McQueen</td>\n",
        "      <td>56.67</td>\n",
-       "      <td>['Biography', ' Drama', ' History']</td>\n",
+       "      <td>Biography,Drama,History</td>\n",
        "      <td>134</td>\n",
        "      <td>8.1</td>\n",
        "      <td>620427.0</td>\n",
@@ -144,7 +147,7 @@
        "      <td>2010</td>\n",
        "      <td>Danny Boyle</td>\n",
        "      <td>18.34</td>\n",
-       "      <td>['Biography', ' Drama']</td>\n",
+       "      <td>Biography,Drama</td>\n",
        "      <td>94</td>\n",
        "      <td>7.6</td>\n",
        "      <td>340696.0</td>\n",
@@ -158,7 +161,7 @@
        "      <td>1968</td>\n",
        "      <td>Stanley Kubrick</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>['Adventure', ' Sci-Fi']</td>\n",
+       "      <td>Adventure,Sci-Fi</td>\n",
        "      <td>149</td>\n",
        "      <td>8.3</td>\n",
        "      <td>583421.0</td>\n",
@@ -172,7 +175,7 @@
        "      <td>2003</td>\n",
        "      <td>Alejandro G. Iñárritu</td>\n",
        "      <td>16.29</td>\n",
-       "      <td>['Crime', ' Drama', ' Thriller']</td>\n",
+       "      <td>Crime,Drama,Thriller</td>\n",
        "      <td>124</td>\n",
        "      <td>7.7</td>\n",
        "      <td>220537.0</td>\n",
@@ -186,7 +189,7 @@
        "      <td>2002</td>\n",
        "      <td>Spike Lee</td>\n",
        "      <td>13.06</td>\n",
-       "      <td>['Drama']</td>\n",
+       "      <td>Drama</td>\n",
        "      <td>135</td>\n",
        "      <td>7.6</td>\n",
        "      <td>167329.0</td>\n",
@@ -205,29 +208,22 @@
        "3               21 Grams            R  2003  Alejandro G. Iñárritu   \n",
        "4              25th Hour            R  2002              Spike Lee   \n",
        "\n",
-       "   Gross Income in millions (USD)                          Movie Genre  \\\n",
-       "0                           56.67  ['Biography', ' Drama', ' History']   \n",
-       "1                           18.34              ['Biography', ' Drama']   \n",
-       "2                           56.95             ['Adventure', ' Sci-Fi']   \n",
-       "3                           16.29     ['Crime', ' Drama', ' Thriller']   \n",
-       "4                           13.06                            ['Drama']   \n",
+       "   Gross Income in millions (USD)              Movie Genre  Movie Runtime  \\\n",
+       "0                           56.67  Biography,Drama,History            134   \n",
+       "1                           18.34          Biography,Drama             94   \n",
+       "2                           56.95         Adventure,Sci-Fi            149   \n",
+       "3                           16.29     Crime,Drama,Thriller            124   \n",
+       "4                           13.06                    Drama            135   \n",
        "\n",
-       "   Movie Runtime  IMDb Rating     Votes  Budget in millions (USD)  \\\n",
-       "0            134          8.1  620427.0                      20.0   \n",
-       "1             94          7.6  340696.0                      18.0   \n",
-       "2            149          8.3  583421.0                      10.5   \n",
-       "3            124          7.7  220537.0                      20.0   \n",
-       "4            135          7.6  167329.0                       4.5   \n",
-       "\n",
-       "   Profit percent  \n",
-       "0      183.350000  \n",
-       "1        1.888889  \n",
-       "2      442.380952  \n",
-       "3      -18.550000  \n",
-       "4      190.222222  "
+       "   IMDb Rating     Votes  Budget in millions (USD)  Profit percent  \n",
+       "0          8.1  620427.0                      20.0      183.350000  \n",
+       "1          7.6  340696.0                      18.0        1.888889  \n",
+       "2          8.3  583421.0                      10.5      442.380952  \n",
+       "3          7.7  220537.0                      20.0      -18.550000  \n",
+       "4          7.6  167329.0                       4.5      190.222222  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,6 +233,13 @@
     "#print(dff[dff.Title == dff.Title.max()]) \n",
     "fulldf.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
