--- a/Notebooks/Combining Data.ipynb
+++ b/Notebooks/Combining Data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 5782 entries, Avatar to My Date With Drew\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   id                 5782 non-null   int64 \n",
+      " 1   release_date       5782 non-null   object\n",
+      " 2   production_budget  5782 non-null   object\n",
+      " 3   domestic_gross     5782 non-null   object\n",
+      " 4   worldwide_gross    5782 non-null   object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 271.0+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"Clean budget data\"\"\"\n",
-    "df_budget['production_budget'] = df_budget['production_budget'].apply(lambda x: x.strip('$').replace(\",\",\"\")) #Clean currency string   \n",
-    "df_budget['production_budget'] = df_budget['production_budget'].astype(float)/1000000 # Convert to integer and change the amount into millions"
+    "df_budget.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Clean budget data\"\"\"\n",
+    "df_budget['production_budget'] = df_budget['production_budget'].str.strip('$').str.replace(\",\",\"\").astype(float)/1000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Clean budget data'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Clean budget data\"\"\"\n",
+    "#df_budget['production_budget'] = df_budget['production_budget'].apply(lambda x: x.strip('$').replace(\",\",\"\")) #Clean currency string   \n",
+    "#df_budget['production_budget'] = df_budget['production_budget'].astype(float)/1000000 # Convert to integer and change the amount into millions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +95,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +127,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fulldf.drop('Unnamed: 0', axis = 1,inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.loc[fulldf['Movie Runtime'] == 0]#.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Remove movies that have no runtime\"\"\"\n",
+    "fulldf = fulldf [fulldf['Movie Runtime'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.loc[fulldf['Gross Income in millions (USD)'] == 0]#.info() # check to see if there are any 0 Gross income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Replace unreported Gross income by the median Gross income\"\"\" \n",
+    "fulldf=fulldf.replace({'Gross Income in millions (USD)': {0: fulldf['Gross Income in millions (USD)'].median}}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.loc[fulldf['Gross Income in millions (USD)'] == 0] # check to see if there are any 0 Gross income\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fulldf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,61 +236,6 @@
     "#fulldf.to_csv(\"fulldf.csv\",index=False) # save this df as an excel file\n",
     "fulldf.to_csv(\"newfulldf.csv\",index=False) # save this df as an excel file"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2241 entries, 0 to 2240\n",
-      "Data columns (total 11 columns):\n",
-      "Unnamed: 0                        2241 non-null int64\n",
-      "Title                             2241 non-null object\n",
-      "Movie Rating                      2241 non-null object\n",
-      "Year                              2241 non-null object\n",
-      "Gross Income in millions (USD)    2241 non-null float64\n",
-      "Movie Genre                       2241 non-null object\n",
-      "Movie Runtime                     2241 non-null int64\n",
-      "IMDb Rating                       2241 non-null float64\n",
-      "Votes                             2241 non-null float64\n",
-      "Budget in millions (USD)          2241 non-null float64\n",
-      "Profit percent                    2241 non-null float64\n",
-      "dtypes: float64(5), int64(2), object(4)\n",
-      "memory usage: 210.1+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "#dff=df.groupby('Movie Genre').count()\n",
-    "#print(dff[dff.Title == dff.Title.max()]) \n",
-    "fulldf.info()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
